--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
+        "barryvdh/laravel-dompdf": "^2.0",
         "fideloper/proxy": "^4.4",
         "laravel/framework": "^6.0",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "phpoffice/phpword": "^1.2"
     },
     "require-dev": {
         "facade/ignition": "^1.16.15",
